<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_gradient_background"
    tools:context=".FragmentEditNewsgroup">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/simple_spinner_dropdown_item"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:gravity="center"
        android:background="#F5F5F5"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/button_close_newsgroup"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginLeft="20dp"
            android:background="@drawable/icon_close"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.104"
            app:layout_constraintStart_toEndOf="@+id/button_close_newsgroup"
            android:gravity="center|left">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="news.TUGraz.at"
                android:textColor="@color/darkgrey"
                android:textSize="20dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="Newsgroup-Configuration"
                android:textColor="@color/darkgrey"
                android:textSize="14dp" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        app:layout_constraintBottom_toTopOf="@+id/button_save_newsgroup"
        app:layout_constraintTop_toBottomOf="@+id/simple_spinner_dropdown_item"
        app:layout_constraintVertical_bias="0.20"
        tools:layout_editor_absoluteX="24dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_newsgroup_name"
            android:textAllCaps="true"
            android:textColor="@color/berry"
            android:textSize="20dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:gravity="center"
            android:text="news.TUGraz.at"
            android:textColor="@color/darkgrey"
            android:textSize="20dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.127"
            app:layout_constraintStart_toEndOf="@+id/button_show_profile"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/label_alias"
            android:textAllCaps="true"
            android:textColor="@color/berry"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/editText_newsgroupServer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:maxLines="1"
            android:textSize="20dp"
            app:backgroundTint="@color/berry" />
    </LinearLayout>

    <Button
        android:id="@+id/button_save_newsgroup"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_gravity="center_vertical|center_horizontal"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginBottom="10dp"
        android:background="#FFFFFF"
        android:text="@string/button_save"
        app:backgroundTint="#38AB79"
        app:cornerRadius="100dp"
        app:layout_constraintBottom_toTopOf="@+id/button_delete_newsgroup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.675"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_delete_newsgroup"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_gravity="center_vertical|center_horizontal"
        android:layout_margin="40dp"
        android:background="#DE553E"
        android:text="@string/button_delete_newsgroup"
        app:backgroundTint="#DE553E"
        app:cornerRadius="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>